--- a/Authy/Authy.desktop
+++ b/Authy/Authy.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Utility;
 Comment=Twilio Authy two factor authentication desktop application
-Exec=~/.0installed/0_desktop/authy/authy_run.sh
+Exec=/media/sda2/git_clone/AppImage_shortcut_desktop/Authy/Authy_run.sh
 Icon=/media/sda2/git_clone/AppImage_shortcut_desktop/Authy/Authy.png
 Name=Authy Desktop
 StartupNotify=true
