--- a/Audacity/Audacity.desktop
+++ b/Audacity/Audacity.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=AudioVideo;Audio;AudioVideoEditing;
 Comment=Record and edit audio files
-Exec=/media/sda2/git_clone/04_AppImage_shortcut_desktop/Audacity/Audacity_run.sh; read as
+Exec=/media/sda2/git_clone/04_AppImage_shortcut_desktop/Audacity/Audacity_run.sh
 GenericName=Sound Editor
 Icon=/media/sda2/git_clone/04_AppImage_shortcut_desktop/Audacity/Audacity.svg
 Name=Audacity
