--- a/AppImage_run/AppImage_Run.desktop
+++ b/AppImage_run/AppImage_Run.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Utility
 Comment=AppImage run by script
-Exec=/media/sda2/git_clone/02_Scripts_Slackware/run_AppImage_JBs.sh %f -r; read asfsda
+Exec=run_AppImage_JBs.sh %f -r; read asfsda
 GenericName=AppImage_Run
 Icon=/media/sda2/git_clone/04_AppImage_shortcut_desktop/AppImage_run/AppImage_logo.jpg
 Keywords=AppImage
@@ -10,5 +10,4 @@ Name=AppImage_Run
 StartupNotify=true
 StartupWMClass=AppImage_Run
 Terminal=1
-#Terminal=0
 Type=Application
