--- a/AppImage_run/AppImage_Extract.desktop
+++ b/AppImage_run/AppImage_Extract.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Utility
 Comment=AppImage extract to a Prog*.AppImage.ext/ folder by script
-Exec=run_AppImage_JBs.sh %f -x; read asfsda
+Exec=run_AppImage_JBs.sh %f -x; echo -e "\nHit enter to terminate"; read _
 GenericName=AppImage_Extract
 Icon=/media/sda2/git_clone/04_AppImage_shortcut_desktop/AppImage_run/AppImage_logo.jpg
 Keywords=AppImage
