Update Discord.desktop and Discord_Update.desktop - using local icon

--- a/zz_others_not_AppImage/Discord/Discord.desktop
+++ b/zz_others_not_AppImage/Discord/Discord.desktop
@@ -3,7 +3,8 @@ Categories=Network;InstantMessaging;
 Comment=All-in-one voice and text chat for gamers that's free, secure, and works on both your desktop and phone.
 Exec=/media/sda2/home/j/.0installed/Discord/Discord/Discord
 GenericName=Internet Messenger
-Icon=/media/sda2/home/j/.0installed/Discord/Discord/discord.png
+#Icon=/media/sda2/home/j/.0installed/Discord/Discord/discord.png
+Icon=/media/sda2/git_clone/04_AppImage_Shortcut_Desktop/Discord/Discord.png
 Name=Discord
 StartupWMClass=discord
 StartupNotify=true
