--- a/zz_others_not_AppImage/Discord/Discord_Update.desktop
+++ b/zz_others_not_AppImage/Discord/Discord_Update.desktop
@@ -3,7 +3,8 @@ Categories=Network;InstantMessaging;
 Comment=Discord_Update
 Exec=/media/sda2/git_clone/04_AppImage_Shortcut_Desktop/zz_others_not_AppImage/Discord/Discord_Update_run.sh
 GenericName=Discord_Update
-Icon=/media/sda2/home/j/.0installed/Discord/Discord/discord.png
+#Icon=/media/sda2/home/j/.0installed/Discord/Discord/discord.png
+Icon=/media/sda2/git_clone/04_AppImage_Shortcut_Desktop/Discord/Discord.png
 Name=Discord_Update
 StartupWMClass=Discord_Update
 StartupNotify=true
